css/style.css
/* RESET */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

img{
    max-width: 100%;
}

/* ROOT */
:root{
    --bgcolor-footer:#23272a;
    --bgcolor-footer2:#ffb6c1;
}

/* COMMON */

* {
    font-family: Whitney, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.container {
    width: 80%;
    margin: auto;
}

a {
    text-decoration: none;
}

.padding {
    padding: 40px 0;
}
ul {
    list-style-type: none;
}

.flex-container{
    display: flex;
}

/* HEADER */

.header-top{
    background-color: #255ee9;
    padding: 0.85rem;
}

.header-bottom{
    justify-content: center;
    background-image: url(../img/jumbo.png);
    background-size: cover;

}

/* NAV */

.nav {
    font-size: 0.9rem;
    align-items: center;
}

.link-section{
    flex-grow: 1;
}

.link {
    justify-content: center;
    padding: 10px 10px ;
}

li{
    padding: 0 2rem;
}
li > a {
    color: white;
}

.logo, 
.login {
    width: 20%;
    padding: 10px 10px;
}

.login{
    text-align: end;
    justify-content: flex-end;
}

.login-text{
    background-color: white;
    width: fit-content;
    padding: 0.6rem ;
    border-radius: 1.3rem;
    color: black;
}

/* HERO */

.jumbo{
    position:relative;
}

.hero{
    position: absolute;
    width: 70%;
    text-align: center;
    color: white;
}

.hero-title {
    text-align: center;
    font-size: 3rem;
    margin: 3.2rem;
}

.hero-text {
    padding: 0.5rem;
    font-size: 1.5rem;
}

.hero-button{
    margin-top: 2rem;
    justify-content: space-evenly;

}
.mac-download{
    font-size: 2rem;
    color: black;
    background-color: white;
    padding: 1rem;
    border-radius: 2rem;
}

.open-browser{
    align-self: center;
    font-size: 2rem;
    color: white;
    background-color: #23272a;
    border-radius: 2rem;
    padding: 1rem;
}

/* MAIN */
.section-2, .section-4 {
    background-color: #d3d3d3;
}
.article {
    height: 350px;
}
 .text {
    width: 60%;
    background-color: #1e90ff;
 }
 .image {
    width: 40%;
    background-color: #ffc0cb;
 }

 .big-box{
    width: 100%;
    height: 700px;
    background-color: #228b22;
 }

 /* FOOTER */

 .footer-top {
    background-color: var(--bgcolor-footer);
    padding: 10px 0 40px;
 }

 .footer-wrapper {
    height: 600px;
 }

 .footer-image {
    width: 28%;
    background-color: #f08080;
 }

 .footer-info {
    width: 18%;
    background-color: #20b2aa;
 }

 .hr-2 {
    border: 2px solid #d6d6d6;
 }

 .footer-bottom {
    background-color: var(--bgcolor-footer);
    padding-top: 40px;
 }

 .footer-nav{
    background-color: #7fffd4;
    height: 60px;
    align-items: center;
    justify-content: space-between;
 }
 
 .footer-logo, .footer-button {
    padding: 5px;
    background-color: var(--bgcolor-footer2);
 }

